--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@ we
 ” and “
 us
 ”).</p>
-<h2>Scope of Our</h2>
-<p>Engagement
-.</p>
+<h2>Scope of Our Engagement.</h2>
+
 <p>The scope of our engagement will be set out in a separate letter that
 will be sent to you each time we agree to represent you on an individual matter
 (the “
