--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Terms and Conditions</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 20px auto; max-width: 800px; line-height: 1.6; color: #333; }
-    h1 { font-size: 2em; margin-bottom: 0.5em; }
+    h1 { font-size: 2em; margin-bottom: 0.5em; text-align: center;}
     h2 { font-size: 1.2em; margin-top: 1em; margin-bottom: 0.5em; }
     p  { margin-bottom: 0.8em; }
   </style>
