--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
     h1 { font-size: 1.5em; margin-bottom: 0.5em; text-align: center;}
     h2 { font-size: 1.2em; margin-top: 1em; margin-bottom: 0.5em; }
     p  { margin-bottom: 0.8em; }
+   .inline-heading {
+   display: inline;
+   margin-right: 10px; /* רווח בין הכותרת לפסקה */}
+  .inline-paragraph {
+   display: inline;
+
   </style>
 </head>
 <body>
 <h1>Terms and Conditions of Engagement for Shibolet Legal Services</h1>
-<h2>Governing Terms.</h2><p>These terms and conditions
+<h2 class="inline-heading">Governing Terms.</h2><p class="inline-paragraph">These terms and conditions
 (the “
 Terms
 ”) contain the standard terms and conditions for our
