--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <title>Terms and Conditions</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 20px auto; max-width: 800px; line-height: 1.6; color: #333; }
-    h1 { font-size: 1.5em; margin-bottom: 0.5em; text-align: center;}
-    h2 { font-size: 1.2em; margin-top: 1em; margin-bottom: 0.5em; }
-    p  { margin-bottom: 0.8em; }
+    h1 { font-size: 1.5em; margin-bottom: 1em; text-align: center;}
+    h2 { font-size: 1em; margin-top: 1em; margin-bottom: 0.5em; }
+    p  { font-size: 1em; margin-bottom: 0.8em; }
    .inline-heading {
    display: inline;
-   margin-right: 10px; /* רווח בין הכותרת לפסקה */}
+   margin-right: 5px; /* רווח בין הכותרת לפסקה */}
   .inline-paragraph {
    display: inline;
 
