--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Terms and Conditions</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px auto; max-width: 800px; line-height: 1.6; color: #333; }
+    body { font-family: Arial, sans-serif; margin: 15px auto; max-width: 800px; line-height: 1.6; color: #333; }
     h1 { font-size: 1.5em; margin-bottom: 1em; text-align: center;}
     h2 { font-size: 1em; margin-top: 1em; margin-bottom: 0.5em; }
     p  { font-size: 1em; margin-bottom: 0.8em; }
@@ -36,9 +36,9 @@ we
 ” and “
 us
 ”).</p>
-<h2>Scope of Our Engagement.</h2>
+<h2 class="inline-heading">Scope of Our Engagement.</h2>
 
-<p>The scope of our engagement will be set out in a separate letter that
+<p class="inline-paragraph">The scope of our engagement will be set out in a separate letter that
 will be sent to you each time we agree to represent you on an individual matter
 (the “
 Engagement Letter
@@ -54,9 +54,8 @@ agreed
 otherwise
  in
 writing.</p>
-<h2>Client(s)</h2>
-<p>.</p>
-<p>For purposes of our
+<h2 class="inline-heading">Client(s)</h2>
+<p class="inline-paragraph">For purposes of our
 engagement, the client we represent is only the person or entity identified in
 our Engagement Letter and, unless agreed to by us in writing, the client does
 not include, and we do not owe any duty to, any other person or entity,
@@ -72,9 +71,9 @@ will not create an attorney-client relationship with them. Absent a written
 agreement to the contrary, each client named in the Engagement Letter is
 jointly and severally responsible for all obligations due to us and each
 represents that she/he/it has full authority to instruct us.</p>
-<h2>Allocation of</h2>
-<p>Work
-. Subject to the terms of the Engagement Letter, we reserve the
+<h2 class="inline-heading">Allocation of Work.</h2>
+<p class="inline-paragraph">
+Subject to the terms of the Engagement Letter, we reserve the
 right at our absolute discretion to allocate and re-allocate work to such
 member(s) of staff as we deem appropriate due to the nature of the matter,
 business requirements or staff absences.</p>
