--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body { font-family: Arial, sans-serif; margin: 15px auto; max-width: 800px; line-height: 1.6; color: #333; }
     h1 { font-size: 1.5em; margin-bottom: 1em; text-align: center;}
     h2 { font-size: 1em; margin-top: 1em; margin-bottom: 0.5em; }
-    p  { font-size: 1em; margin-bottom: 0.8em; }
+    p  { font-size: 1em; margin-bottom: 0.8em; display: inline;}
    .inline-heading {
    display: inline;
    margin-right: 5px; /* רווח בין הכותרת לפסקה */}
