--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
     h2 { font-size: 1em; margin-top: 1em; margin-bottom: 0.5em; }
     p  { font-size: 1em; margin-bottom: 0.8em; display: inline;}
    .inline-heading {
+   display: inline;
    margin-right: 5px; /* רווח בין הכותרת לפסקה */}
+
+    
+    p.inline-paragraph::after {
+      content: "";
+      display: block;
+
   .inline-paragraph {
    display: inline;
 
