--- a/index.html
+++ b/index.html
@@ -8,17 +8,9 @@
     h1 { font-size: 1.5em; margin-bottom: 1em; text-align: center;}
     h2 { font-size: 1em; margin-top: 1em; margin-bottom: 0.5em; }
     p  { font-size: 1em; margin-bottom: 0.8em; display: inline;}
-   .inline-heading {
-   display: inline;
-   margin-right: 5px; /* רווח בין הכותרת לפסקה */}
-
-    
-    p.inline-paragraph::after {
-      content: "";
-      display: block;
-
-  .inline-paragraph {
-   display: inline;
+   .inline-heading {display: inline; margin-right: 5px; /* רווח בין הכותרת לפסקה */}
+    p.inline-paragraph::after {content: ""; display: block; margin-bottom: 1em; 
+    .inline-paragraph { display: inline;
 
   </style>
 </head>
