--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ agreed
 otherwise
  in
 writing.</p>
-<h2 class="inline-heading">Client(s)</h2>
+<h2 class="inline-heading">Client(s).</h2>
 <p class="inline-paragraph">For purposes of our
 engagement, the client we represent is only the person or entity identified in
 our Engagement Letter and, unless agreed to by us in writing, the client does
@@ -75,8 +75,8 @@ Subject to the terms of the Engagement Letter, we reserve the
 right at our absolute discretion to allocate and re-allocate work to such
 member(s) of staff as we deem appropriate due to the nature of the matter,
 business requirements or staff absences.</p>
-<h2>Fees and</h2>
-<p>Expenses; VAT. 
+<h2 class="inline-heading">Fees and Expenses; VAT. </h2>
+<p class="inline-paragraph">
 Our fee arrangement will be set out
 in the Engagement Letter or in a separate written agreement regarding fees, if
 applicable. In the absence of such an agreement, our standard hourly rates will
@@ -102,8 +102,8 @@ of 1% per month. If you do not pay on time, we may suspend or terminate our
 services, apply monies held for you towards settlement of our invoice, or
 retain deeds, documents, monies and other items held for you until our fees,
 disbursements and expenses have been paid in full.</p>
-<h2>Conflicts</h2>
-<p>Before accepting any new
+<h2 class="inline-heading">Conflicts.</h2>
+<p class="inline-paragraph">Before accepting any new
 assignment from you, we will conduct an internal conflict of interest check to
 confirm that we are able to represent you in accordance with the applicable
 professional rules of ethics governing our service.</p>
@@ -130,9 +130,8 @@ but which we are ethically or legally prohibited from disclosing. You agree
 that our obligations to maintain such confidences will not preclude us from
 representing you, even where such information may be material to the subject
 matter of our engagement with you.</p>
-<h2>Confidential</h2>
-<p>Information
-. We have a professional obligation
+<h2 class="inline-heading">Confidential Information.</h2>
+<p class="inline-paragraph">We have a professional obligation
 not to disclose your confidential information or use it for another party’s
 benefit without your consent. However, you agree that we may disclose any such
 confidential information to our professional indemnity insurers, our auditors,
@@ -148,16 +147,10 @@ confidential information for you, we may act for another client on a matter
 where such information is material to their matter, but we will put in place
 appropriate measures to ensure that the confidentiality of your information is
 maintained.</p>
-<h2>Data Protection</h2>
-<p>. 
-Unless we
-specifically agree otherwise, 
-y
-ou and we 
-will each 
-act as 
-a separate
-and independent 
+<h2 class="inline-heading">Data Protection.</h2>
+<p class="inline-paragraph">
+Unless we specifically agree otherwise, 
+you and we will each act as a separate and independent 
 controller 
 (
 or local
@@ -219,14 +212,13 @@ process, including the right to access your personal data and the right to
 request us to correct or delete inaccurate or outdated personal data. We may
 share personal data, as set forth under the Confidential Information Section of
 these Terms.</p>
-<h2>Third Parties</h2>
-<p>Our engagement is solely
+<h2 class="inline-heading">Third Parties.</h2>
+<p class="inline-paragraph">Our engagement is solely
 with you. It does not create any rights or obligations for any third party and
 no third party may rely on our advice. We assume no responsibility to any third
 party unless expressly agreed otherwise in writing.</p>
-<h2>Termination of Services</h2>
-<p>.</p>
-<p>We may terminate our engagement
+<h2 class="inline-heading">Termination of Services.</h2>
+<p class="inline-paragraph">We may terminate our engagement
 for any reason at any time. If we propose to exercise this right, we shall
 confirm in writing that we are no longer representing you and we will charge
 you for all work completed up to the date of our ceasing to act. Furthermore, we
@@ -249,10 +241,8 @@ written terms in the Engagement Letter.</p>
 <p>The fact that we may inform you from time to time of developments in the
 law which may be of interest to you, by newsletter or otherwise, should not be
 understood as a re-establishment of a lawyer client relationship.</p>
-<h2>Retention of</h2>
-<p>Documents; Intellectual Property
-. When
-termination occurs, papers and property that you have provided to us will, at
+<h2 class="inline-heading">Retention of Documents; Intellectual Property.</h2>
+<p class="inline-paragraph">When termination occurs, papers and property that you have provided to us will, at
 your request, be returned to you promptly
  subject to the timely payment of our outstanding fees and costs.
  Copies of work product we have created for you, which you may need
@@ -274,9 +264,8 @@ maintained by us or other reputable third-party service providers. Such storage
 is subject to appropriate safeguards and used solely for internal firm
 purposes, including compliance, risk management, and record-keeping, and does
 not constitute ongoing legal representation.</p>
-<h2>Electronic</h2>
-<p>Communication
-. We employ commercially reasonable efforts
+<h2 class="inline-heading">Electronic Communication.</h2>
+<p class="inline-paragraph">We employ commercially reasonable efforts
 to exclude from our e-mails and any attachments any virus or other defect that
 might affect any computer or IT system. However, it is your responsibility to
 put in place measures to protect your computer or IT system against any such
@@ -291,10 +280,9 @@ Similarly, we will not be liable for any data breach, breach of confidentiality
 or any direct or indirect losses which results from transferring, processing or
 hosting data on data hosting or document sharing applications and technologies
 that you have specifically requested us to use.</p>
-<h2>Use of</h2>
-<p>Technology and Artificial Intelligence
-. In providing
-our legal services to you, we may use a range of technologies provided by
+<h2 class="inline-heading">Use of Technology and Artificial Intelligence.</h2>
+<p class="inline-paragraph">
+In providing our legal services to you, we may use a range of technologies provided by
 third-party service providers. Such technologies may include, but are not
 limited to, those that facilitate legal research, legal review/drafting,
 document digitization, document automation, file-sharing, audio transcription,
@@ -305,9 +293,9 @@ in selecting and utilizing such technologies in accordance with our legal,
 regulatory, and professional obligations, as well as these Terms, including by
 employing appropriate technical and organizational measures to protect the security
 and privacy of any information shared with the relevant service providers.</p>
-<h2>Client</h2>
-<p>Identification
-. We are obligated to verify the
+<h2 class="inline-heading">Client Identification.</h2>
+<p class="inline-paragraph">
+We are obligated to verify the
 identity of our clients, their representatives and owners. We are also legally obligated
 to clarify the purpose and nature of the matter and/or origin of the client’s
 funds and other assets. We may therefore ask the client to provide us with
@@ -322,15 +310,14 @@ prevented by law from informing the client of our suspicions or that a report
 has been, or will be, made to the relevant authorities. In the event of such
 suspicions, we may decline or cease acting for you if these legal obligations
 are not satisfied.</p>
-<h2>No Guarantee of</h2>
-<p>Success
-. It is impossible to provide any
+<h2 class="inline-heading">No Guarantee of Success.</h2>
+<p class="inline-paragraph">It is impossible to provide any
 promise or guarantee about the outcome of your matters. Nothing in the Engagement
 Letter, these Terms or any statements by our staff or lawyers constitutes a
 promise or guarantee. Any comments about the outcome of your matter are
-expressions of opinion</p>
-<p>only.</p>
-<p>Liability. 
+expressions of opiniononly.</p>
+<h2 class="inline-heading">Liability.</h2>
+<p class="inline-paragraph">
 To the fullest extent permitted by applicable law, our aggregate
 liability to you (whether in contract and in tort (including professional
 negligence) or under statute or otherwise), for any and all claims arising out
@@ -352,9 +339,9 @@ resulting from or arising out of the performance or non-performance of the servi
 provided under our engagement. Nothing in these Terms shall exclude or limit
 our liability for fraud, willful misconduct, gross negligence, or any other
 liability, which cannot be excluded or limited under mandatory law.</p>
-<h2>External</h2>
-<p>Advisors
-. Where services are provided to you
+<h2 class="inline-heading">External Advisors.</h2>
+<p class="inline-paragraph">
+Where services are provided to you
 by any third-party advisor such services will be directed and controlled by
 such third-party advisor. Legal responsibility for the provision of such
 services will be governed by the engagement agreement entered into between you
@@ -362,8 +349,8 @@ and the third-party advisor. If we instruct any third-party advisor on your
 behalf, you will be directly responsible for their fees and disbursements, and
 we do not accept responsibility or liability for the acts, errors or omissions
 of any such third-party advisor.</p>
-<h2>Jurisdiction</h2>
-<p>. The Engagement Letter, these Terms and any claims arising in
+<h2 class="inline-heading">Jurisdiction.</h2>
+<p class="inline-paragraph">The Engagement Letter, these Terms and any claims arising in
 respect thereof shall be governed by the laws of the State of Israel, without
 giving effect to any principles of conflict of laws. The competent courts of
 Tel Aviv-Yafo shall have the sole and exclusive jurisdiction over any dispute,
@@ -372,8 +359,8 @@ relating to any service or work performed by us or relating thereto. All such
 matters shall be brought exclusively before such courts, and the parties hereby
 irrevocably submit to the jurisdiction of such courts, to the exclusion of any
 other court or jurisdiction.</p>
-<h2>Agreement</h2>
-<p>These Terms shall be
+<h2 class="inline-heading">Agreement.</h2>
+<p class="inline-paragraph">These Terms shall be
 incorporated into any specific engagement and will be part of each Engagement
 Letter. These Terms supersede all prior understandings or agreements between
 you and us, and they shall prevail over any contrary or alternative terms of
