--- a/index.html
+++ b/index.html
@@ -171,9 +171,7 @@ by us
 in such manner and for such purposes as we see fit during and/or as
 part of our engagement to render our services to you. You agree that we may use
 the data we receive from you for additional purposes such as to comply with our
-legal, regulatory or ethical obligations, fulfil risk management obligations
-,</p>
-<p>protect
+legal, regulatory or ethical obligations, fulfil risk management obligations, protect
 and enforce our rights, support our business operations and business
 transactions, as well as 
 analysis, market benchmarking, cost
@@ -249,6 +247,8 @@ written terms in the Engagement Letter.</p>
 <p>The fact that we may inform you from time to time of developments in the
 law which may be of interest to you, by newsletter or otherwise, should not be
 understood as a re-establishment of a lawyer client relationship.</p>
+  <br>
+  <br>
 <h2 class="inline-heading">Retention of Documents; Intellectual Property.</h2>
 <p class="inline-paragraph">When termination occurs, papers and property that you have provided to us will, at
 your request, be returned to you promptly
