--- a/index.html
+++ b/index.html
@@ -374,7 +374,6 @@ other court or jurisdiction.</p>
 incorporated into any specific engagement and will be part of each Engagement
 Letter. These Terms supersede all prior understandings or agreements between
 you and us, and they shall prevail over any contrary or alternative terms of
-yours or any third party. Any changes to these Terms must be agreed between us
-and confirmed in writing.</p>
+yours or any third party. </p>
 </body>
 </html>
